# waveshare-ESP32-S3-io

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md  idf.sh  partitions.csv  sdkconfig.defaults  sdkconfig.nomatter
.github/workflows/: cd.yml  ci.yml
apps/full/: CMakeLists.txt  sdkconfig.defaults
apps/full/main/: CMakeLists.txt  app_mqtt.h  idf_component.yml  main.c  mb_server.c  mb_server.h  web_server.c
apps/matter/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
apps/matter/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  matter.cpp  matter.h  web_server.c  web_server.h
apps/matter/www/: .gitignore  index.html
components/board/: CMakeLists.txt  Kconfig  app_rtc.h  button.c  button.h  buzzer.c  buzzer.h  di.c  di.h  dout.c  dout.h  i2c_bus.c  i2c_bus.h  idf_component.yml  led.c  rtc.c  sntp_sync.c
components/esp32-wifi-bootstrap/: .gitignore  CMakeLists.txt  README.md  idf_component.yml
components/esp32-wifi-bootstrap/content/: index.html  index.html.h
components/esp32-wifi-bootstrap/examples/homekit-led/: CMakeLists.txt  README.md  sdkconfig.defaults
components/esp32-wifi-bootstrap/examples/homekit-led/main/: main.c
components/esp32-wifi-bootstrap/include/: wifi_config.h
components/esp32-wifi-bootstrap/src/: form_urlencoded.c  form_urlencoded.h  wifi_config.c  wifi_config_util.c
components/esp32-wifi-bootstrap/tools/: generate_index_html_header.py  server.py
components/quickjs/: CMakeLists.txt
components/quickjs/compat/: esp32_compat.h
components/quickjs/patches/: 0001-getTimezoneOffset-portable.patch
components/scripting/: CMakeLists.txt  RULES.md  TIME_SOURCE_TODO.md  bindings.c  dsl.js  dsl.js.h  package.json  scripting.c  scripting_priv.h
components/scripting/include/: scripting.h
components/scripting/test/: cascade.test.js  components.test.js  conditions.test.js  cron.test.js  dispatch.test.js  facts.test.js  harness.js  mqtt-publish.test.js  robustness.test.js  timing.test.js  triggers.test.js  watchdog.test.js
doc/cra/due-diligence/: due_diligence.md  workflow.md
docs/: can.md  flash.html  index.html  manifest-full-v1.1.5.json  manifest-full-v1.1.6.json  manifest-full.json  manifest-matter-v1.1.5.json  manifest-matter-v1.1.6.json  manifest-matter.json  matter.md  modbus.md  mqtt.md
main/: CHIPProjectConfig.h  CMakeLists.txt  app_config.c  app_config.h  app_mqtt.c  app_mqtt.h  app_time.c  app_time.h  auth.c  auth.h  button.c  button.h  buzzer.c  buzzer.h  can_server.c  can_server.h  di.c  dout.c  eth.c  eth.h  idf_component.yml  led.c  led.h  main.c  matter.cpp  matter.h  mb_server.c  rtc.c  sntp_sync.c  sntp_sync.h  web_server.c
simulator/: README.md  index.html  package.json  server.js
www/: index.html
